refactor eval script at the playground

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "52608845",
    "metadata": {},
    "outputs": [
@@ -28,26 +28,37 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=736x1104>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from datetime import datetime\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
     "\n",
-    "PROMPT_VERSION = 1\n",
-    "TASK_NAME = \"1_modern_minimalist\"\n",
     "IMG_FILENAME = \"image.png\"\n",
-    "PROMPT_FILENAME = f\"prompt_v{PROMPT_VERSION}.md\"\n",
-    "DATASET_PATH = Path(f\"dataset/{TASK_NAME}\")\n",
-    "IMG_PATH = DATASET_PATH / IMG_FILENAME\n",
-    "PROMPT_PATH = DATASET_PATH / PROMPT_FILENAME\n",
+    "DATASET_PATH = Path(\"dataset\")\n",
+    "RESULTS_PATH = Path(\"results\")\n",
+    "RESULTS_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "user_prompt = PROMPT_PATH.read_text(encoding=\"utf-8\")\n",
+    "def get_prompt_path(task: str, prompt_version: int) -> Path:\n",
+    "    prompt_filename = f\"prompt_v{prompt_version}.md\"\n",
+    "    return DATASET_PATH / task / prompt_filename\n",
+    "\n",
+    "def get_image_path(task: str) -> Path:\n",
+    "    return DATASET_PATH / task / IMG_FILENAME\n",
+    "\n",
+    "def get_results_path(trial_dt: datetime, task: str) -> Path:\n",
+    "    task_path = RESULTS_PATH / trial_dt.isoformat() / task\n",
+    "    task_path.mkdir(exist_ok=True, parents=True)\n",
+    "    return RESULTS_PATH / task_path\n",
+    "\n",
+    "example_task, example_version = \"1_modern_minimalist\", 1\n",
+    "user_prompt = get_prompt_path(example_task, example_version).read_text(encoding=\"utf-8\")\n",
     "print(user_prompt)\n",
-    "Image.open(IMG_PATH)"
+    "Image.open(get_image_path(example_task))"
    ]
   },
   {
@@ -58,33 +69,53 @@
    "outputs": [],
    "source": [
     "import base64\n",
+    "import aiofiles\n",
     "from openai import AsyncClient\n",
+    "from openai.types.images_response import Usage\n",
+    "from pydantic import BaseModel\n",
     "from settings import settings\n",
     "from google import genai\n",
+    "from google.genai.types import GenerateContentResponseUsageMetadata\n",
+    "\n",
+    "IMG_GEN_PROMPT_PATH = Path(\"prompts/img_gen.jinja\")\n",
+    "\n",
+    "class UsageMetadata(BaseModel):\n",
+    "    model: str\n",
+    "    input_tokens: int\n",
+    "    output_tokens: int\n",
+    "    total_tokens: int\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_google_usage(cls, model: str, usage: GenerateContentResponseUsageMetadata) -> \"UsageMetadata\":\n",
+    "        return cls(\n",
+    "            model=model,\n",
+    "            input_tokens=usage.prompt_token_count,\n",
+    "            output_tokens=usage.candidates_token_count,\n",
+    "            total_tokens=usage.total_token_count\n",
+    "        )\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_openai_usage(cls, model: str, usage: Usage) -> \"UsageMetadata\":\n",
+    "        return cls(\n",
+    "            model=model,\n",
+    "            input_tokens=usage.input_tokens,\n",
+    "            output_tokens=usage.output_tokens,\n",
+    "            total_tokens=usage.total_tokens\n",
+    "        )\n",
     "\n",
     "class ImageGenClient:\n",
-    "    # TODO add cost calculaton\n",
     "    def __init__(self):\n",
     "        self.openai_client = AsyncClient(\n",
     "            api_key=settings.OPENROUTER_API_KEY, \n",
     "            base_url=settings.OPENROUTER_BASE_URL, \n",
     "        )\n",
     "        self.gemini_client = genai.Client()\n",
+    "        self.token_usage_list: list[UsageMetadata] = []\n",
+    "        self.system_prompt = IMG_GEN_PROMPT_PATH.read_text(encoding=\"utf-8\")\n",
     "\n",
     "    async def generate_image(self, model: str, prompt: str, image_path: Path, result_path: Path):\n",
-    "        if \"gpt\" in model:\n",
-    "            response = await self.openai_client.images.edit(\n",
-    "                model=model,\n",
-    "                prompt=prompt,\n",
-    "                image=open(image_path, \"rb\"),\n",
-    "            )\n",
-    "            image_base64 = response.data[0].b64_json\n",
-    "            image_bytes = base64.b64decode(image_base64)\n",
-    "\n",
-    "            with open(result_path, \"wb\") as f:\n",
-    "                f.write(image_bytes)\n",
-    "\n",
-    "        elif \"google\" in model:\n",
+    "        prompt = f\"{self.system_prompt}\\n{prompt}\"\n",
+    "        if \"google\" in model:\n",
     "            img = Image.open(image_path)\n",
     "            response = await self.gemini_client.aio.models.generate_content(\n",
     "                model=model,\n",
@@ -95,7 +126,25 @@
     "                    print(part.text)\n",
     "                elif part.inline_data:\n",
     "                    result_img = part.as_image()\n",
-    "                    result_img.save(result_path)\n"
+    "                    result_img.save(result_path)\n",
+    "            self.token_usage_list.append(\n",
+    "                UsageMetadata.from_google_usage(response.usage_metadata)\n",
+    "            )\n",
+    "            return\n",
+    "        \n",
+    "        response = await self.openai_client.images.edit(\n",
+    "            model=model,\n",
+    "            prompt=prompt,\n",
+    "            image=open(image_path, \"rb\"),\n",
+    "        )\n",
+    "        image_base64 = response.data[0].b64_json\n",
+    "        image_bytes = base64.b64decode(image_base64)\n",
+    "        self.token_usage_list.append( \n",
+    "            UsageMetadata.from_openai_usage(response.usage)\n",
+    "        )\n",
+    "\n",
+    "        async with aiofiles.open(result_path, \"wb\") as f:\n",
+    "            await f.write(image_bytes)\n"
    ]
   },
   {
@@ -103,17 +152,176 @@
    "execution_count": null,
    "id": "3c16acc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-image-1.5-2025-12-16 5_warm_mediterranean 1\n",
+      "gpt-image-1.5-2025-12-16 5_warm_mediterranean 2\n",
+      "gpt-image-1.5-2025-12-16 5_warm_mediterranean 3\n",
+      "gpt-image-1.5-2025-12-16 5_warm_mediterranean 4\n",
+      "gpt-image-1.5-2025-12-16 5_warm_mediterranean 5\n",
+      "gpt-image-1.5-2025-12-16 4_tech_savvy 1\n",
+      "gpt-image-1.5-2025-12-16 4_tech_savvy 2\n",
+      "gpt-image-1.5-2025-12-16 4_tech_savvy 3\n",
+      "gpt-image-1.5-2025-12-16 4_tech_savvy 4\n",
+      "gpt-image-1.5-2025-12-16 4_tech_savvy 5\n",
+      "gpt-image-1.5-2025-12-16 2_industrial_loft 1\n",
+      "gpt-image-1.5-2025-12-16 2_industrial_loft 2\n",
+      "gpt-image-1.5-2025-12-16 2_industrial_loft 3\n",
+      "gpt-image-1.5-2025-12-16 2_industrial_loft 4\n",
+      "gpt-image-1.5-2025-12-16 2_industrial_loft 5\n",
+      "gpt-image-1.5-2025-12-16 1_modern_minimalist 1\n",
+      "gpt-image-1.5-2025-12-16 1_modern_minimalist 2\n",
+      "gpt-image-1.5-2025-12-16 1_modern_minimalist 3\n",
+      "gpt-image-1.5-2025-12-16 1_modern_minimalist 4\n",
+      "gpt-image-1.5-2025-12-16 1_modern_minimalist 5\n",
+      "gpt-image-1.5-2025-12-16 3_japandi_zen 1\n",
+      "gpt-image-1.5-2025-12-16 3_japandi_zen 2\n",
+      "gpt-image-1.5-2025-12-16 3_japandi_zen 3\n",
+      "gpt-image-1.5-2025-12-16 3_japandi_zen 4\n",
+      "gpt-image-1.5-2025-12-16 3_japandi_zen 5\n",
+      "gpt-image-1-mini 5_warm_mediterranean 1\n",
+      "gpt-image-1-mini 5_warm_mediterranean 2\n",
+      "gpt-image-1-mini 5_warm_mediterranean 3\n",
+      "gpt-image-1-mini 5_warm_mediterranean 4\n",
+      "gpt-image-1-mini 5_warm_mediterranean 5\n",
+      "gpt-image-1-mini 4_tech_savvy 1\n",
+      "gpt-image-1-mini 4_tech_savvy 2\n",
+      "gpt-image-1-mini 4_tech_savvy 3\n",
+      "gpt-image-1-mini 4_tech_savvy 4\n",
+      "gpt-image-1-mini 4_tech_savvy 5\n",
+      "gpt-image-1-mini 2_industrial_loft 1\n",
+      "gpt-image-1-mini 2_industrial_loft 2\n",
+      "gpt-image-1-mini 2_industrial_loft 3\n",
+      "gpt-image-1-mini 2_industrial_loft 4\n",
+      "gpt-image-1-mini 2_industrial_loft 5\n",
+      "gpt-image-1-mini 1_modern_minimalist 1\n",
+      "gpt-image-1-mini 1_modern_minimalist 2\n",
+      "gpt-image-1-mini 1_modern_minimalist 3\n",
+      "gpt-image-1-mini 1_modern_minimalist 4\n",
+      "gpt-image-1-mini 1_modern_minimalist 5\n",
+      "gpt-image-1-mini 3_japandi_zen 1\n",
+      "gpt-image-1-mini 3_japandi_zen 2\n",
+      "gpt-image-1-mini 3_japandi_zen 3\n",
+      "gpt-image-1-mini 3_japandi_zen 4\n",
+      "gpt-image-1-mini 3_japandi_zen 5\n",
+      "gemini-2.5-flash-image 5_warm_mediterranean 1\n",
+      "gemini-2.5-flash-image 5_warm_mediterranean 2\n",
+      "gemini-2.5-flash-image 5_warm_mediterranean 3\n",
+      "gemini-2.5-flash-image 5_warm_mediterranean 4\n",
+      "gemini-2.5-flash-image 5_warm_mediterranean 5\n",
+      "gemini-2.5-flash-image 4_tech_savvy 1\n",
+      "gemini-2.5-flash-image 4_tech_savvy 2\n",
+      "gemini-2.5-flash-image 4_tech_savvy 3\n",
+      "gemini-2.5-flash-image 4_tech_savvy 4\n",
+      "gemini-2.5-flash-image 4_tech_savvy 5\n",
+      "gemini-2.5-flash-image 2_industrial_loft 1\n",
+      "gemini-2.5-flash-image 2_industrial_loft 2\n",
+      "gemini-2.5-flash-image 2_industrial_loft 3\n",
+      "gemini-2.5-flash-image 2_industrial_loft 4\n",
+      "gemini-2.5-flash-image 2_industrial_loft 5\n",
+      "gemini-2.5-flash-image 1_modern_minimalist 1\n",
+      "gemini-2.5-flash-image 1_modern_minimalist 2\n",
+      "gemini-2.5-flash-image 1_modern_minimalist 3\n",
+      "gemini-2.5-flash-image 1_modern_minimalist 4\n",
+      "gemini-2.5-flash-image 1_modern_minimalist 5\n",
+      "gemini-2.5-flash-image 3_japandi_zen 1\n",
+      "gemini-2.5-flash-image 3_japandi_zen 2\n",
+      "gemini-2.5-flash-image 3_japandi_zen 3\n",
+      "gemini-2.5-flash-image 3_japandi_zen 4\n",
+      "gemini-2.5-flash-image 3_japandi_zen 5\n",
+      "gemini-3-pro-image-preview 5_warm_mediterranean 1\n",
+      "gemini-3-pro-image-preview 5_warm_mediterranean 2\n",
+      "gemini-3-pro-image-preview 5_warm_mediterranean 3\n",
+      "gemini-3-pro-image-preview 5_warm_mediterranean 4\n",
+      "gemini-3-pro-image-preview 5_warm_mediterranean 5\n",
+      "gemini-3-pro-image-preview 4_tech_savvy 1\n",
+      "gemini-3-pro-image-preview 4_tech_savvy 2\n",
+      "gemini-3-pro-image-preview 4_tech_savvy 3\n",
+      "gemini-3-pro-image-preview 4_tech_savvy 4\n",
+      "gemini-3-pro-image-preview 4_tech_savvy 5\n",
+      "gemini-3-pro-image-preview 2_industrial_loft 1\n",
+      "gemini-3-pro-image-preview 2_industrial_loft 2\n",
+      "gemini-3-pro-image-preview 2_industrial_loft 3\n",
+      "gemini-3-pro-image-preview 2_industrial_loft 4\n",
+      "gemini-3-pro-image-preview 2_industrial_loft 5\n",
+      "gemini-3-pro-image-preview 1_modern_minimalist 1\n",
+      "gemini-3-pro-image-preview 1_modern_minimalist 2\n",
+      "gemini-3-pro-image-preview 1_modern_minimalist 3\n",
+      "gemini-3-pro-image-preview 1_modern_minimalist 4\n",
+      "gemini-3-pro-image-preview 1_modern_minimalist 5\n",
+      "gemini-3-pro-image-preview 3_japandi_zen 1\n",
+      "gemini-3-pro-image-preview 3_japandi_zen 2\n",
+      "gemini-3-pro-image-preview 3_japandi_zen 3\n",
+      "gemini-3-pro-image-preview 3_japandi_zen 4\n",
+      "gemini-3-pro-image-preview 3_japandi_zen 5\n",
+      "bytedance-seed/seedream-4.5 5_warm_mediterranean 1\n",
+      "bytedance-seed/seedream-4.5 5_warm_mediterranean 2\n",
+      "bytedance-seed/seedream-4.5 5_warm_mediterranean 3\n",
+      "bytedance-seed/seedream-4.5 5_warm_mediterranean 4\n",
+      "bytedance-seed/seedream-4.5 5_warm_mediterranean 5\n",
+      "bytedance-seed/seedream-4.5 4_tech_savvy 1\n",
+      "bytedance-seed/seedream-4.5 4_tech_savvy 2\n",
+      "bytedance-seed/seedream-4.5 4_tech_savvy 3\n",
+      "bytedance-seed/seedream-4.5 4_tech_savvy 4\n",
+      "bytedance-seed/seedream-4.5 4_tech_savvy 5\n",
+      "bytedance-seed/seedream-4.5 2_industrial_loft 1\n",
+      "bytedance-seed/seedream-4.5 2_industrial_loft 2\n",
+      "bytedance-seed/seedream-4.5 2_industrial_loft 3\n",
+      "bytedance-seed/seedream-4.5 2_industrial_loft 4\n",
+      "bytedance-seed/seedream-4.5 2_industrial_loft 5\n",
+      "bytedance-seed/seedream-4.5 1_modern_minimalist 1\n",
+      "bytedance-seed/seedream-4.5 1_modern_minimalist 2\n",
+      "bytedance-seed/seedream-4.5 1_modern_minimalist 3\n",
+      "bytedance-seed/seedream-4.5 1_modern_minimalist 4\n",
+      "bytedance-seed/seedream-4.5 1_modern_minimalist 5\n",
+      "bytedance-seed/seedream-4.5 3_japandi_zen 1\n",
+      "bytedance-seed/seedream-4.5 3_japandi_zen 2\n",
+      "bytedance-seed/seedream-4.5 3_japandi_zen 3\n",
+      "bytedance-seed/seedream-4.5 3_japandi_zen 4\n",
+      "bytedance-seed/seedream-4.5 3_japandi_zen 5\n"
+     ]
+    }
+   ],
    "source": [
-    "IMG_GEN_PROMPT_PATH = Path(\"prompts/img_gen.jinja\")\n",
-    "RESULTS_PATH = Path(\"results\")\n",
-    "RESULTS_PATH.mkdir(parents=True, exist_ok=True)\n",
-    "MODELS = [\"gpt-image-1.5-2025-12-16\", \"gpt-image-1-mini\", \"gpt-image-1\", \"gemini-2.5-flash-image\"] \n",
-    "# TODO add a rest of google models\n",
+    "import asyncio\n",
+    "import itertools\n",
     "\n",
-    "prompt = IMG_GEN_PROMPT_PATH.read_text(encoding=\"utf-8\")\n",
-    "input_prompt = f\"{prompt}\\n{user_prompt}\"\n",
-    "client = ImageGenClient()"
+    "TASKS: list[str] = []\n",
+    "for _, dirs, _ in DATASET_PATH.walk():\n",
+    "    TASKS.extend(dirs)\n",
+    "    break\n",
+    "\n",
+    "MODELS = [\n",
+    "    \"gpt-image-1.5-2025-12-16\", \n",
+    "    \"gpt-image-1-mini\", \n",
+    "    \"gemini-2.5-flash-image\", \n",
+    "    \"gemini-3-pro-image-preview\", \n",
+    "    \"bytedance-seed/seedream-4.5\"\n",
+    "] \n",
+    "VERSIONS = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "product = itertools.product(MODELS, TASKS, VERSIONS)\n",
+    "trial_dt = datetime.now()\n",
+    "\n",
+    "client = ImageGenClient()\n",
+    "tasks: list[asyncio.Task] = []\n",
+    "\n",
+    "for item in product:\n",
+    "    model, task, version = item[0], item[1], item[2]\n",
+    "    prompt_path = get_prompt_path(task, version)\n",
+    "    prompt = prompt_path.read_text(encoding=\"utf-8\")\n",
+    "    result_path = get_results_path(trial_dt, task) / IMG_FILENAME\n",
+    "    tasks.append(\n",
+    "        client.generate_image(\n",
+    "            model=model, \n",
+    "            prompt=prompt, \n",
+    "            image_path=get_image_path(task), \n",
+    "            result_path=result_path\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
@@ -122,7 +330,9 @@
    "id": "61dfda7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results = await asyncio.gather(*tasks)"
+   ]
   }
  ],
  "metadata": {
