remove utils, move settings to src, update ignore, fix main

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -78,7 +78,7 @@
     "from openai import AsyncClient\n",
     "from openai.types.images_response import Usage\n",
     "from pydantic import BaseModel\n",
-    "from settings import settings\n",
+    "from src.settings import settings\n",
     "from google import genai\n",
     "from google.genai.types import GenerateContentResponseUsageMetadata\n",
     "from jinja2 import Environment, FileSystemLoader\n",
